--- a/public/assets/css/solucionesentel.css
+++ b/public/assets/css/solucionesentel.css
@@ -1,6 +1,7 @@
 .entel-slide-container{
 	text-align: center;
 	padding-top: 2%;
+	display: inline;
 }
 .texto{
 
@@ -9,8 +10,8 @@
 	padding-bottom: 5%;
 }
 .imagen{
-	max-width: 100%;
-	max-height: 65%;
+	max-height: auto;
+	max-width: 75%;
 }
 .arscene{
 	padding-top: 5%;
